--- a/ch9-Onboarding-l1/TripManager/TripManager/Resources/Localizable.xcstrings
+++ b/ch9-Onboarding-l1/TripManager/TripManager/Resources/Localizable.xcstrings
@@ -1,9 +1,6 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "Next" : {
-
-    },
     "onboarding.button.next" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -158,6 +155,7 @@
       }
     },
     "Skip" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
