--- a/ch11-gridIntro-l1/TripManager/Resources/Localizable.xcstrings
+++ b/ch11-gridIntro-l1/TripManager/Resources/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "Mon exemple" : {
+
+    },
     "My Trips" : {
 
     },
@@ -265,9 +268,6 @@
           }
         }
       }
-    },
-    "Texte Exemple" : {
-
     }
   },
   "version" : "1.0"
